--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "tsc",
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "publish": "pnpm build && changeset publish",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
