--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   },
+  "peerDependencies": {
+    "zod": "^3.21.4",
+    "mongodb": "^5.7.0"
+  },
   "packageManager": "pnpm@8.6.11"
 }
