--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "lint": "tsc",
     "build": "tsup src/index.ts --format cjs,esm --dts",
-    "publish": "pnpm build && changeset publish",
+    "release": "pnpm build && changeset publish",
     "test": "jest --coverage"
   },
   "devDependencies": {
