switch from jest to vitest

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
-      - run: pnpm run test
+      - run: pnpm run test:coverage
       - uses: changesets/action@v1
         with:
           publish: pnpm release
