--- a/package.json
+++ b/package.json
@@ -31,21 +31,23 @@
     "lint": "tsc",
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "release": "pnpm build && changeset publish",
-    "test": "jest --coverage"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest run --ui --coverage"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/jest": "^29.5.3",
-    "jest": "^29.6.2",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.1.1",
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1"
   },
   "peerDependencies": {
-    "zod": "^3.21.4",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "zod": "^3.21.4"
   },
   "packageManager": "pnpm@8.6.11"
 }
