add bson schema conversion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,10 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
-  }
+    "noUncheckedIndexedAccess": true
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
