--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,8 @@ jobs:
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
-      - run: pnpm run test:coverage
+      - run: pnpm run test -- --coverage
+      - run: pnpm run test:e2e
       - uses: changesets/action@v1
         with:
           publish: pnpm release
