--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "release": "pnpm build && changeset publish",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest run --ui --coverage"
+    "test:e2e": "vitest --config ./vitest.e2e.config.ts"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/uuid": "^9.0.2",
     "@vitest/coverage-v8": "^0.34.1",
     "@vitest/ui": "^0.34.1",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "vitest": "^0.34.1"
   },
   "peerDependencies": {
