fix workflows to use github secrets

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
       - run: pnpm run lint
       - run: pnpm run test -- --coverage
       - run: pnpm run test:e2e
+        env:
+          VITE_MONGODB_URI: ${{ secrets.VITE_MONGODB_URI }}
+          VITE_MONGODB_DATABASE: ${{ secrets.VITE_MONGODB_DATABASE }}
       - uses: changesets/action@v1
         with:
           publish: pnpm release
