--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,5 @@
     "noEmit": true,
     "noUncheckedIndexedAccess": true
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
